syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/iosakurov/auth/pkg/auth_v1;auth_v1";

service UserAPI {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  string name = 2;
  string email = 3;
  string password = 4;
  string password_confirm = 5;
  Role role = 6;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  Role role = 4;
}

message DeleteRequest {
  int64 id = 1;
}

enum  Role {
  UNKNOWN = 0;
  ADMIN = 1;
  USER = 2;
}

message UserInfo {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string password_confirm = 5;
  Role role = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}